css/main.css
/* ... */
#InfoBlock h3 {
    margin: 0 0;
}

#InfoBlock h1, .docs h2 {
    font-weight: 200;
}

#InfoBlock hr {
    border-color: #0095D4;
}

#modules {
    text-align: center;
}

#modules ul {
    margin: 0;
    padding: 0;
    display: inline-block;
    width: 100%;
}

#modules  li {
    display: inline-block;
    list-style: none;
    min-width: 9em;
    width: 24%;
    text-align: center;
}

#modules  li h3 {
    margin: 5px 0;
    font-weight: 200;

}

li.lusca h3 {
    color: #F6CA42;
}

li.makara h3 {
    color: #EA9D5E;
}

li.adaro h3 {
    color: #C4B4D6;
}

li.kappa h3 {
    color: #90BE6B;
}

#cast {
    text-align: left;
}

#cast ul {
    margin: 0;
    padding: 0;
    display: inline-block;
}

#cast li {
    list-style: none;
    margin: 0 1em;
    vertical-align: top;
    display: inline-block;
    width: 27%;

}

#cast li p {
    margin: 0;
}

#cast a {
    text-decoration: none;
}

#cast .info {
    text-align: left;
}

#cast .info p {
    color: #FFFFFF;
    max-width: 12em;

}

#cast .info h4 {
    margin: 0 0 .25em 0;
}

/*Hexagon*/

.hex2 {

    width: 70px;
    height: 70px;
}

.hex2 > div {
    font-size: 2em;
    line-height: 2em;
    text-align: center;
    width: 62px;
    height: 70px;
    color: #FFF;
    background-image: url('../img/hex.png');
    background-repeat: no-repeat;
    margin: 0 auto;
}

.docs {
    background-color: #FFFFFF;
    color: #414141;
    padding: 3em 0;
    position: relative;
}

.docs h1 {
    font-weight: bold;
    margin: 0 0 1em 0;
}

.docsContent section:first-of-type h2 {
    margin-top: 0;
}

.docsContent h2 {
    margin-top: 2em;
    font-weight: bold;
    font-size: 1.8em;
    margin-bottom: .5em;
    padding-bottom: .5em;
    border-bottom: solid 1px #016084;
}

.docs .staticMenu {
    float: left;
    position: absolute;
    font-size: 1.25em;

}

.staticMenu > ul {
    margin: 0 !important;
    padding: 0;
}

.staticMenu ul {
    margin: 0 .5em;
    padding: 0;
}

.staticMenu ul li {
    list-style: none;
    margin: 0;
    padding: 0 0 .5em 0;
    font-weight: 200;
}

.staticMenu a {
    text-decoration: none;
}

.docsContent {
    margin: 0 0 0 240px;
}

footer {
    padding: 3em;
    background-color: #e6e7e8;
    color: #6d6e70;
}

footer a, .docs a {
    color: #0779BE;

}

/*Responsive!*/
@media only screen and  (max-width: 640px) {

    #forkMe {
        display: none;
    }

    header {
        margin-bottom: 1em;
    }

    header ul li {
        margin-right: .5em;
        display: block;
    }

    header ul li:last-of-type {
        display: block;
        float: none;
        margin: 1em 0 0 1em;
        position: absolute;
        top:0;
        right: 0;
    }

    header ul li:first-of-type {
        margin: 0 0 2em 0;
    }

    .mainLogo{
        float: none;
    }

    #IntroText{
        margin: 0;
    }

    #modules  li {
        display: inline-block;
        list-style: none;
        width: 45%;
        text-align: center;
        margin-bottom: 2em;
    }

    .docs {
        padding: 1em;
    }
    .docs h1 {
        margin: 0 0 .25em 0;
    }

    .docs .staticMenu {
        float: none;
        position: inherit;
    }

    .docsContent {
        margin: 0;
    }

}

/*Just for fun*/
.bubble {
    z-index: 0;
    bottom: 50px;
    position: absolute;
    border-radius: 3em;
    border: solid 1px #169;
    background-color: rgba(255, 255, 255, 0.08);
    /* Defaults to 5s delay at start, but delay is later set to a random duration. */
    -webkit-animation-name: float-up;
    -moz-animation-name: float-up;
    -ms-animation-name: float-up;
    -o-animation-name: float-up;
    animation-name: float-up;
    -webkit-animation-duration: 5s;
    -moz-animation-duration: 5s;
    -ms-animation-duration: 5s;
    -o-animation-duration: 5s;
    animation-duration: 5s;
    -webkit-animation-timing-function: linear;
    -moz-animation-timing-function: linear;
    -ms-animation-timing-function: linear;
    -o-animation-timing-function: linear;
    animation-timing-function: linear;
}

/* Keyframe animations */
@-webkit-keyframes float-up {
    0% {
        -webkit-transition: -webkit-transform 0.3s ease;
        -webkit-transform: translate3d(0, 0, 0);
    }
    100% {
        -webkit-transition: -webkit-transform 0.3s ease;
        -webkit-transform: translate3d(0, -477px, 0);
    }
}

@-moz-keyframes float-up {
    0% {
        -moz-transition: -moz-transform 0.3s ease;
        -moz-transform: translate3d(0, 0, 0);
    }
    100% {
        -moz-transition: -moz-transform 0.3s ease;
        -moz-transform: translate3d(0, -477px, 0);
    }
}

@-o-keyframes float-up {
    0% {
        -o-transition: -o-transform 0.3s ease;
        -o-transform: translate3d(0, 0, 0);
    }
    100% {
        -o-transition: -o-transform 0.3s ease;
        -o-transform: translate3d(0, -477px, 0);
    }
}

@keyframes float-up {
    0% {
        transition: transform 0.3s ease;
        transform: translate3d(0, 0, 0);
    }
    100% {
        transition: transform 0.3s ease;
        transform: translate3d(0, -477px, 0);
    }
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Image replacement
 */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    /* IE 6/7 fallback */
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 150%;
}

/*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */

.hidden {
    display: none !important;
    visibility: hidden;
}

/*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}
/* ... */

